...
            "state": "translated",
            "value": "Até %lld km"
          }
        }
      }
    },
    "Avaliar turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Avaliar turno"
          }
...
            "state": "translated",
            "value": "Candidatura retirada. Enquanto a vaga aceitar candidaturas, você pode se candidatar de novo."
          }
        }
      }
    },
    "Candidaturas": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Candidaturas"
          }
...
            "state": "translated",
            "value": "Coordenadas inválidas."
          }
        }
      }
    },
    "Código de acesso": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Código de acesso"
          }
...
            "state": "translated",
            "value": "Licença"
          }
        }
      }
    },
    "Licenças de código aberto": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Licenças de código aberto"
          }
...
            "state": "translated",
            "value": "Material próprio: %@"
          }
        }
      }
    },
    "Meu turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meu turno"
          }
        }
      }
    },
    "Meus turnos": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meus turnos"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
